syntax = "proto3";

package prompt;

Message Msg {
  string user_name = 1;
  string prompt = 2;
}

Message Req {
   string user_name = 1;
}

Message Health {
  string health = 1;
}

// ReturnPrompt - a base64 encoded jpg that got generated.
Message ReturnPrompt {
    // maybe we change this to a string later, idk.
    bytes jpg = 1;
}

service PromptReq {
  // when someone connects to the server.
  rpc ConnectServer (Req) returns (Health);
  rpc SendPrompt (Msg) returns (ReturnPrompt);
}

